hphp/hack/test/dot_php/hack-decl.php.exp
File "hack-decl.php", line 1, characters 1-33:
Incorrect comment; possible values include `strict`, `partial`, or empty (Parsing[1002])
