hphp/hack/test/dot_php/hack-decl.php
<?hh // decl

function foo($bar) {}
